check_error_loop.txt
    Checking novapad v0.5.7 (C:\rustnotepad\rustnotepad)
warning: unused import: `AudioSample`
   --> src\podcast_recorder.rs:664:44
    |
664 |     use crate::audio_capture::{AudioQueue, AudioSample};
    |                                            ^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0609]: no field `paused` on type `Arc<SharedState>`
   --> src\podcast_recorder.rs:324:30
    |
324 |              if *self.shared.paused.lock().unwrap() {
    |                              ^^^^^^ unknown field
    |
    = note: available fields are: `status`, `last_error`, `started_at`, `paused_at`, `paused_total` ... and 4 others

warning: unused variable: `hwnd`
    --> src\app_windows\podcast_window.rs:1650:53
     |
1650 | fn start_recording_action(state: &mut PodcastState, hwnd: HWND) {
     |                                                     ^^^^ help: if this is intentional, prefix it with an underscore: `_hwnd`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\podcast_recorder.rs:940:25
    |
940 |             if let Some(mut sample) = system_audio_queue.pop(audio_timeout) {
    |                         ----^^^^^^
    |                         |
    |                         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\podcast_recorder.rs:945:29
    |
945 |                 if let Some(mut sample) = mic_queue.pop(Duration::from_millis(1)) { 
    |                             ----^^^^^^
    |                             |
    |                             help: remove this `mut`

For more information about this error, try `rustc --explain E0609`.
warning: `novapad` (bin "novapad") generated 4 warnings
error: could not compile `novapad` (bin "novapad") due to 1 previous error; 4 warnings emitted
